# skill-harness

./: .gitignore  Cargo.toml  README.md  SPEC.md  install.sh
.github/workflows/: ci.yml  release.yml
skill/: SKILL.md
skill/runbooks/: dynamic-context.md  install-skill.md
skills/compose-skills/: SKILL.md  SPEC.md
skills/compose-skills/references/: example-plan.md  examples.md
skills/compose-skills/references/fixtures/: agent-doc-decomposition.md  ambiguous-one-vs-many.md  malformed-plan.md  oversized-workflow-handoff.md
src/: compose.rs  lib.rs  main.rs  manage.rs  okf.rs
tests/: cli.rs
