[package]
name = "skill-harness"
version = "0.1.2"
edition = "2024"
description = "Lifecycle management for AI agent skills — install, audit, eval, sync across environments"
license = "CC0-1.0"
repository = "https://github.com/btakita/skill-harness"

[dependencies]
agent-kit = { version = "0.4", optional = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[features]
default = ["detect"]
detect = ["agent-kit"]
